--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body{
             background-color: darkgray;
-            
+            margin: 0%;
         }
         .hero{
             display: flex;
