aplicando-responsavidade-pra-desktop-grande_inicio

--- a/index.html
+++ b/index.html
@@ -8,31 +8,44 @@
 </head>
 <body>
     <nav class="inicio_cabeçalho">
-        <img src="imagem/logo_lourivan.png"  alt="logo_lourivan">
+        <img src="imagem/logo_lourivan.png" height="80px" alt="logo_lourivan">
         <ul class="nav_botoes">
-            <li><a href="#areas_de_atuaçao">areas de atuaçao</a></li>
+            <li><a href="#titulo_atuaçao">areas de atuaçao</a></li>
             <li>sobre</li>
             <li>contato</li>
         </ul>
     </nav>
     <header class="hero">
         <div class="background_degrade"> 
-            <img src="imagem/hero_600.png" height="841px" alt="">
+            <img src="imagem/hero_600.png" alt="">
         </div>
     </header>
+    <article id="sobre_mim">
+      <div id="conteiner_sobre_mim">
+        <img src="imagem/imagen_sobre.png" alt="">
+        <div class="explicaçao_sobre_mim">
+          <h2>Sobre Mim</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, harum ea! Quas itaque expedita ullam cum quaerat? Laborum autem ut perferendis pariatur ratione distinctio, officiis minus harum non eveniet minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis a maiores fugit, ipsum sit aperiam obcaecati architecto voluptates, quos delectus id, alias tenetur
+           <br>
+           <br>
+           <br> 
+            asperiores at inventore nam ducimus laboriosam dignissimos? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, voluptatem similique sunt debitis dolorum vero accusamus deleniti, quis ab provident dolores incidunt perferendis vitae natus, nihil velit! Adipisci, totam asperiores.</p>
+        </div>
+      </div>
+    </article>
 
     <section class="main_contenct">
-        <h2 id="areas_de_atuaçao">especialidades</h2>
+        <h2 id="titulo_atuaçao">areas de atuaçao</h2>
        <div class="conteiner_especialidades"> 
            <article>
             
-               <img src="imagem/foto_providenciaria.jpg" width="440px" alt="">
+               <img src="imagem/foto_providenciaria.jpg" width="240px" alt="">
                <section class="conteudo_atuaçao">
                 <h2>🧑‍⚖️ Direito Previdenciário</h2>
                 <p>
                   Atuação especializada na defesa dos direitos dos segurados perante o INSS e a Previdência Social. Entre os principais serviços:
                 </p>
-                <ul>
+                <ul class="lista_info">
                   <li>✅ Aposentadorias (por idade, tempo de contribuição, especial, etc.)</li>
                   <li>✅ Revisão de aposentadorias e benefícios</li>
                   <li>✅ Auxílio-doença e aposentadoria por invalidez</li>
@@ -45,13 +58,13 @@
 
            </article>
            <article>
-               <img src="imagem/foto_criminal.jpg" width="440px" alt="">
+               <img src="imagem/foto_criminal.jpg" width="240px" alt="">
                <section class="conteudo_atuaçao">
                 <h2>⚖️ Direito Criminal</h2>
                 <p>
                   Atuação voltada à defesa dos direitos e garantias do cidadão em processos criminais, desde investigações até o julgamento. Auxílio técnico, estratégico e humanizado em diversas situações, como:
                 </p>
-                <ul>
+                <ul class="lista_info">
                   <li>✅ Defesa em inquéritos e processos criminais</li>
                   <li>✅ Acompanhamento em delegacias e audiências</li>
                   <li>✅ Habeas corpus e liberdade provisória</li>
@@ -63,20 +76,20 @@
               </section>
            </article>
            <article>
-               <img src="imagem/foto_imobiliario.jpg" width="440px" alt="">
+               <img src="imagem/foto_imobiliario.jpg" width="240px" alt="">
                <section class="conteudo_atuaçao">
                 <h2>🏠 Direito Imobiliário</h2>
                 <p>
                   Atuação voltada à regularização, negociação e proteção jurídica de bens imóveis. Ideal para quem compra, vende, aluga ou administra propriedades. Os principais serviços incluem:
                 </p>
-                <ul>
+                <ul class="lista_info">
                   <li>✅ Análise e elaboração de contratos de compra e venda</li>
-                  <li>✅ Assessoria em locações residenciais e comerciais</li>
-                  <li>✅ Usucapião judicial e extrajudicial</li>
+                  <li> ✅Assessoria em locações residenciais e comerciais</li>
+                  <li>✅Usucapião judicial e extrajudicial</li>
                   <li>✅ Inventário e partilha de bens imóveis</li>
                   <li>✅ Regularização de imóveis e registro em cartório</li>
-                  <li>✅ Ações possessórias e de reintegração de posse</li>
-                  <li>✅ Consultoria preventiva para evitar litígios</li>
+                  <li> ✅Ações possessórias e de reintegração de posse</li>
+                  <li> ✅Consultoria preventiva para evitar litígios</li>
                 </ul>
               </section>
               
