hero_titulo-iniciada

--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
     </nav>
     <header class="hero">
         <div class="background_degrade"> 
+            <div class="hero_titulo">
+              <h1>lourivan de araujo/<br>advogado</h1>
+              <a href="#">entre em contato</a>
+            </div>
             <img src="imagem/hero_600.png" alt="">
         </div>
     </header>
     <article id="sobre_mim">
+      <h2 id="titulo_sobre">Sobre Mim</h2>
       <div id="conteiner_sobre_mim">
-        <img src="imagem/imagen_sobre.png" alt="">
+        <img src="imagem/imagem_sobre2.png" class="img_sobre" alt="">
         <div class="explicaçao_sobre_mim">
-          <h2>Sobre Mim</h2>
+          
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, harum ea! Quas itaque expedita ullam cum quaerat? Laborum autem ut perferendis pariatur ratione distinctio, officiis minus harum non eveniet minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis a maiores fugit, ipsum sit aperiam obcaecati architecto voluptates, quos delectus id, alias tenetur
            <br>
            <br>
