modificaçao no nav

--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
     <link rel="stylesheet" href="estilo_land.css">
 </head>
 <body>
-    <nav class="inicio_cabeçalho">
-        <img src="imagem/logo_lourivan.png" height="80px" alt="logo_lourivan">
-        <ul class="nav_botoes">
-            <li><a href="#conteiner_sobre_mim">sobre</a></li>
-            <li><a href="#titulo_atuaçao">areas de atuaçao</a></li>
-            <li>contato</li>
-        </ul>
-    </nav>
-    <header class="hero">
-        <div class="background_degrade"> 
-            <div class="hero_titulo">
-              <h1>lourivan de araujo/<br>advogado</h1>
-              <a href="#">entre em contato</a>
-            </div>
-            <img src="imagem/hero_600.png" alt="">
-        </div>
-    </header>
+      <div class="conteiner_nav">
+        <nav class="inicio_cabeçalho">
+            <img src="imagem/logo_lourivan.png" height="80px" alt="logo_lourivan">
+            <ul class="nav_botoes">
+                <li><a href="#conteiner_sobre_mim">sobre</a></li>
+                <li><a href="#titulo_atuaçao">areas de atuaçao</a></li>
+                <li>contato</li>
+            </ul>
+        </nav>
+            
+            <header class="hero">
+          <div class="background_degrade">
+              <div class="hero_titulo">
+                <h1>lourivan de araujo/<br>advogado</h1>
+                <a href="#">entre em contato</a>
+              </div>
+              <img src="imagem/hero_600.png" alt="">
+          </div>
+            </header>
+      </div>
+
+
+
     <article id="sobre_mim">
       <h2 id="titulo_sobre">Sobre Mim</h2>
       <div id="conteiner_sobre_mim">
