apliquei estrutura modular

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
     <link rel="stylesheet" href="estilo_land.css">
+    <link rel="stylesheet" href="navLA.css">
+    <link rel="stylesheet" href="heroLA.css">
+    <link rel="stylesheet" href="Sobre-mim.css">
+    <link rel="stylesheet" href="atuaçao.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
       <div class="conteiner_nav">
