ordem estrutura modular

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
-    <link rel="stylesheet" href="estilo_land.css">
-    <link rel="stylesheet" href="navLA.css">
-    <link rel="stylesheet" href="heroLA.css">
-    <link rel="stylesheet" href="Sobre-mim.css">
-    <link rel="stylesheet" href="atuaçao.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/1geral.css">
+    <link rel="stylesheet" href="css/2nav.css">
+    <link rel="stylesheet" href="css/3hero.css">
+    <link rel="stylesheet" href="css/4Sobre.css">
+    <link rel="stylesheet" href="css/5atuaçao.css">
+    <link rel="stylesheet" href="css/6footer.css">
 </head>
 <body>
       <div class="conteiner_nav">
