--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
 
     <article id="sobre">
-      <h2 id="titulo_sobre">Quem Sou Eu</h2>
+      <div id="conteiner-titulo-sobre">
+        <h2 id="titulo_sobre">Quem Sou Eu</h2>
+      </div>
       <div id="conteiner-sobre">
-        <img src="imagem/imagem_sobre2.png"> 
+        <img src="imagem/sobre-degrade.png" id="img-sobre"> 
 
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, harum ea! Quas itaque expedita ullam cum quaerat? Laborum autem ut perferendis pariatur ratione distinctio, officiis minus harum non eveniet minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis a maiores fugit, ipsum sit aperiam obcaecati architecto voluptates, quos delectus id, alias tenetu
-            asperiores at inventore nam ducimus laboriosam dignissimos? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, voluptatem similique sunt debitis dolorum vero accusamus deleniti, quis ab provident dolores incidunt perferendis vitae natus, nihil velit! Adipisci, totam asperiores.</p>
+          <div id="conteiner-color-texto">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio ipsum dolorem aut, minima cum id illum aperiam doloremque assumenda architecto laboriosam saepe quam possimus minus temporibus eaque animi omnis! Et. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam optio inventore ab illo esse. Harum neque repudiandae voluptatibus delectus in officiis nam exercitationem quod reprehenderit, magni molestias, est quas fugiat!</p>
+          </div>
       
       </div>
     </article>
