cores e espaçamentos atualizados
ta dificil achar as cores

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <!--aqui esta as imagem-hero e o tiulo principal-->
             <div class="conteiner-hero">
                 <div class="hero_titulo">
-                  <h1>lourivan de araujo/<br>advogado</h1>
+                  <h1>lourivan de araujo<br>advogado</h1>
                   <a href="#">entre em contato</a>
                 </div>
                 <img src="imagem/hero_600.png" alt="">
